src/objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>Account_Access_Level__c</fullName>
        <globalPicklist>Access_Level</globalPicklist>
        <label>Account Access Level</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Access_Level__c</fullName>
        <globalPicklist>Access_Level</globalPicklist>
        <label>Case Access Level</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Access_Level__c</fullName>
        <globalPicklist>Access_Level</globalPicklist>
        <label>Contact Access Level</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
</CustomObject>